--- a/isee/pom.xml
+++ b/isee/pom.xml
@@ -43,6 +43,13 @@
             <artifactId>commons-dbcp2</artifactId>
             <version>2.8.0</version>
         </dependency>
+        
+                <!-- https://mvnrepository.com/artifact/com.github.seratch/jslack -->
+        <dependency>
+            <groupId>com.github.seratch</groupId>
+            <artifactId>jslack</artifactId>
+            <version>3.4.2</version>
+        </dependency>
 
 
     </dependencies>
