--- a/isee/pom.xml
+++ b/isee/pom.xml
@@ -50,6 +50,14 @@
             <artifactId>jslack</artifactId>
             <version>3.4.2</version>
         </dependency>
+        
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>7.2.2.jre11</version>
+            <!-- ou versão 7.2.2.jre11, se sua JDK for a 11 -->
+            <!-- ou versão que já existir na .m2 local -->
+        </dependency>
 
 
     </dependencies>
